# qtuiotouch

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile.am  README.md  configure.ac  run-demo.sh
build-aux/: autotroll.mk
demo/: Makefile.am  configure.ac
demo/src/: graphicsview.cpp  graphicsview.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
include/dosc/: bytes.hpp  decoder.hpp
include/dosc/asio/: udp_receiver.hpp
include/tuio/: tuio.hpp
src/: qasioioservice.cpp  qasioioservice.hpp  qtuioplugin.cpp  qtuioplugin.hpp  qtuiotouch.cpp  qtuiotouch.hpp
src/dosc/: decoder.cpp  doscdump.cpp
src/tuio/: tuio.cpp  tuiodump.cpp
